--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,9 +1,9 @@
 <div class="logo">
-    <a href="https://www.creative-tim.com" class="simple-text">
-        <div class="logo-img">
+    <a href="/" class="simple-text">
+        <!-- <div class="logo-img">
             <img src="/assets/img/angular2-logo-red.png"/>
-        </div>
-        Creative Tim
+        </div> -->
+        Medical No Show
     </a>
 </div>
 <div class="sidebar-wrapper">
