Versão inicial do upload de arquivos

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -50,5 +50,9 @@
               </div>
           </div>
       </div>
+
+      <div class="row">
+        <app-file-upload class="col-12"></app-file-upload>
+      </div>
   </div>
 </div>
