Remoção de componentes não utilizados e inclusão de tabela base para previsões

--- a/src/assets/scss/core/variables/_brand.scss
+++ b/src/assets/scss/core/variables/_brand.scss
@@ -4,8 +4,8 @@
 /*     brand Colors              */
 
 $brand-primary:              $purple-500 !default;
-$brand-info:                 $cyan-500 !default;
-$brand-success:              $green-500 !default;
+$brand-info:                 #004787 !default;
+$brand-success:              #337836 !default;
 $brand-warning:              $orange-500 !default;
 $brand-danger:               $red-500 !default;
 $brand-rose:                 $pink-500 !default;
