--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="main-content">
   <div class="container-fluid">
-      <div class="row">
+      <!-- <div class="row">
           <div class="col-lg-4 col-md-6 col-sm-6">
               <div class="card card-stats">
                   <div class="card-header card-header-success card-header-icon">
@@ -49,10 +49,15 @@
                   </div>
               </div>
           </div>
+      </div> -->
+
+      <div class="row">
+        <app-file-upload class="col-12" (fileUpload)="fileUploadSuccess($event)"></app-file-upload>
       </div>
 
       <div class="row">
-        <app-file-upload class="col-12"></app-file-upload>
+        <app-predictions class="col-12"></app-predictions>
       </div>
+
   </div>
 </div>
