--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <div class="logo">
     <a href="/" class="simple-text">
-        Medical No Show
+        Med No Show
     </a>
 </div>
 <div class="sidebar-wrapper">
