--- a/src/app/file-upload/file-upload.component.html
+++ b/src/app/file-upload/file-upload.component.html
@@ -6,7 +6,7 @@
 	</div>
 
 	<div class="col-4 text-right">
-		<button class="btn btn-success btn-sm" [disabled]="!selectedFiles" (click)="upload()">
+		<button class="btn btn-info btn-sm" [disabled]="!selectedFiles" (click)="upload()">
 			Upload
 		</button>
 	</div>
