--- a/src/app/predictions/predictions.component.html
+++ b/src/app/predictions/predictions.component.html
@@ -16,12 +16,12 @@
                             <th>Previsão</th>
                         </thead>
                         <tbody>
-                            <tr *ngFor="let paciente of pacientes">
-                                <td>{{ paciente.nome }}</td>
-                                <td>{{ paciente.cidade }}</td>
-                                <td>{{ paciente.idade }}</td>
-                                <td>{{ paciente.especialidade }}</td>
-                                <td>{{ paciente.previsao }}</td>
+                            <tr *ngFor="let prediction of predictions">
+                                <td>{{ prediction.name }}</td>
+                                <td>{{ prediction.city }}</td>
+                                <td>{{ prediction.age }}</td>
+                                <td>{{ prediction.especialty }}</td>
+                                <td>{{ prediction.no_show }}</td>
                             </tr>
                         </tbody>
                     </table>
